# mentat-gui

./: .pre-commit-config.yaml  BTC_Trends.csv  Fear_&_Greed.csv  LOGGING.md  README.md  __main__.py  config.py  data_fetcher.py  data_sources.yaml  gui.py  indicator_params.json  pyproject.toml  requirements.txt  results.csv  signal_scanner.py  start.py  test_gui_fix.py  test_logging.py
.github/workflows/: ci.yml
database/: BTCUSDT_1d.db
fetchers/: __init__.py  base.py  binance.py  fng.py  fred.py  trends.py  yahoo.py
tests/: test_config.py  test_data_fetcher.py  test_fetchers.py  test_gui.py  test_signal_scanner.py
